# python-template

./: .env  .gitignore  README.md  pyproject.toml
app/: main.py
app/core/: config.py
